# synap-framework

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/benchmark_model/: CMakeLists.txt  as371_makefile.inc
app/opencv_test/: CMakeLists.txt  magnitude_filter_8u.cl  main.cpp  test_elliipse.cpp  test_opencl.cpp  test_warp.cpp
app/synap_cli/: CMakeLists.txt  main.cpp
app/synap_cli_ic/: CMakeLists.txt  main.cpp
app/synap_cli_ic2/: CMakeLists.txt  main.cpp
app/synap_cli_info/: CMakeLists.txt  main.cpp
app/synap_cli_ip/: CMakeLists.txt  main.cpp
app/synap_cli_nb/: CMakeLists.txt  main.cpp
app/synap_cli_od/: CMakeLists.txt  main.cpp
app/synap_cli_od2/: CMakeLists.txt  main.cpp
app/synap_cli_rnn/: CMakeLists.txt  float16.hpp  main.cpp
app/synap_cli_sr/: CMakeLists.txt  main.cpp
app/synap_cli_tflitec/: CMakeLists.txt  main.c
app/synap_init/: CMakeLists.txt  main.cpp
cmake/modules/: BuildType.cmake  FindNCNN.cmake  FindNNA.cmake  FindOnnxruntime.cmake  FindOpenCV.cmake  FindTimVX.cmake  FindVSSDK.cmake  Findebg_utils.cmake  Findsynap_device.cmake  Findtensorflow_lite.cmake  parse_config.cmake
java/: build.gradle
java/src/main/: AndroidManifest.xml
java/src/main/cpp/: CMakeLists.txt  synap_jni.c
java/src/main/java/com/synaptics/synap/: Attachment.java  InferenceEngine.java  IoBuffer.java  Network.java  Synap.java  SynapException.java  SynapNative.java
lib/: CMakeLists.txt
lib/miniz/: CMakeLists.txt  miniz.c
lib/nlohmann/: CMakeLists.txt
lib/stb/: CMakeLists.txt
lib/synap_app/: CMakeLists.txt
lib/synap_app/inc/synap/: arg_parser.hpp  label_info.hpp
lib/synap_app/src/: arg_parser.cpp  label_info.cpp
lib/synap_base/: CMakeLists.txt
lib/synap_base/inc/synap/: metadata.hpp  types.hpp
lib/synap_base/src/: metadata.cpp  types.cpp
lib/synap_img/: CMakeLists.txt
lib/synap_img/inc/synap/: image_convert.hpp  image_utils.hpp
lib/synap_img/src/: image_convert.cpp  image_utils.cpp
lib/synap_postprocess/: CMakeLists.txt
lib/synap_postprocess/inc/synap/: classifier.hpp  detector.hpp  image_postprocessor.hpp
lib/synap_postprocess/src/: classifier.cpp  detector.cpp  image_postprocessor.cpp  json_utils.cpp
lib/synap_preprocess/: CMakeLists.txt
lib/synap_preprocess/inc/synap/: input_data.hpp  preprocessor.hpp
lib/synap_preprocess/src/: input_data.cpp  preprocessor.cpp
lib/synap_utils/: CMakeLists.txt
lib/synap_utils/inc/synap/: bundle_parser.hpp  bundle_parser_dir.hpp  bundle_parser_zip.hpp  enum_utils.hpp  file_utils.hpp  logging.hpp  string_utils.hpp  timer.hpp  zip_tool.hpp
lib/synap_utils/src/: bundle_parser.cpp  bundle_parser_dir.cpp  bundle_parser_zip.cpp  file_utils.cpp  string_utils.cpp  zip_tool.cpp
lib/synapnb/: CMakeLists.txt  synapnb.map
lib/synapnb/inc/synap/: allocator.hpp  buffer.hpp  buffer_cache.hpp  network.hpp  npu.hpp  tensor.hpp
lib/synapnb/src/: allocator.cpp  allocator_malloc.cpp  allocator_malloc.hpp  allocator_synap.cpp  allocator_synap.hpp  buffer.cpp  buffer_private.hpp  network.cpp  network_private.hpp  npu.cpp  predictor.hpp  predictor_bundle.cpp  predictor_bundle.hpp  predictor_ebg.cpp  predictor_ebg.hpp  predictor_onnx.cpp  predictor_onnx.hpp  predictor_tflite.cpp  predictor_tflite.hpp  quantization.cpp  quantization.hpp  synap_driver.cpp  synap_driver.hpp  tensor.cpp
release/: CMakeLists.txt  README
sublima/cli/: CMakeLists.txt  main.cpp
sublima/lib/: CMakeLists.txt
sublima/lib/inc/synap/: sublima.hpp
sublima/lib/src/: sublima.cpp
test/: CMakeLists.txt
test/zip_tool/: main.cpp
test/zip_tool/data/: file1.txt
test/zip_tool/data/d0/d1/d2/: file3.txt
test/zip_tool/data/d2/: file2.txt
